--- a/.github/workflows/develop-action.yml
+++ b/.github/workflows/develop-action.yml
@@ -7,24 +7,18 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
-
-    steps:
-    
+    steps:    
       - name: Check Out Repo 
         uses: actions/checkout@v2
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -33,6 +27,19 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/criselitocomic-backend
-
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+  deploy:
+    runs-on: ubuntu-latest
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    steps:
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'criselitocomic-backend'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_fddb74db0c2b4716a07bf54bd1400a5b }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_2ba84ceb279744d9a9f6a23d5427e66b }}/jroge/criselitocomic-backend:${{ github.sha }}'
