--- a/.github/workflows/develop-action.yml
+++ b/.github/workflows/develop-action.yml
@@ -31,6 +31,7 @@ jobs:
         run: echo ${{ steps.docker_build.outputs.digest }}
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
