--- a/appsettings.json
+++ b/appsettings.json
@@ -1,3 +1,5 @@
+// Copy this file to 'appsettings.Development.json' in the same folder
+// Modify 'CloudinarySettings' with values in discord
 {
   "Logging": {
     "LogLevel": {
@@ -5,5 +7,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "Name": "do_not_touch_this",
+    "Key": "do_not_touch_this",
+    "Secret": "do_not_touch_this"
+  }
 }
