--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -11,18 +11,14 @@
   "profiles": {
     "criselitocomic_backend": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7066;http://localhost:5066",
-      "dotnetRunMessages": true
+      "applicationUrl": "https://localhost:7066;http://localhost:5066"
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "comicfiles",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -32,7 +28,10 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "publishAllPorts": true,
-      "useSSL": true
+      "useSSL": true,
+      "environmentVariables": {
+        "PORT": "${PORT}"
+      }
     }
   }
 }
