--- a/.gitignore
+++ b/.gitignore
@@ -454,5 +454,5 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 
 ## CriselitoComic
-#temp_criselitocomic_files/
+temp_criselitocomic_files/
 appsettings.Development.json
