--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "coinbase/coinbase-commerce": "^1.0",
         "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^5.0",
         "laravel/framework": "^8.54",
         "laravel/passport": "^10.2",
         "laravel/sanctum": "^2.11",
